fix theme flicker

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,7 +5,7 @@
 
 // css variables
 :root { //default = dark
-  --bgpagecolor: #333;
+  --bgpagecolor: #9E8D9E;
   --bgcontentcolor: #282828;
   --titlecolor: #bbb;
   --linkcolor: #d93b00;
@@ -13,7 +13,7 @@
   --h4color: #999;
   --shadow: #666;
   --mastheadtextcolor: #444;
-  --bgimgopacity: 0.5;
+  --bgimgtransparency: 0.5;
   --selectboxbgcolor:#555;
   --fonts: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;;
   --themeswitchtransition:0s;
@@ -22,7 +22,7 @@
 @media only screen and (prefers-color-scheme: dark) {
   :root:not([data-theme=light]) {
     color-scheme: dark;
-    --bgpagecolor: #222;
+    --bgpagecolor: #9E8D9E;
     --bgcontentcolor: #282828;
     --titlecolor: #bbb;
     --linkcolor: #d93b00;
@@ -38,7 +38,7 @@
 
 [data-theme=dark] {
   color-scheme: dark;
-  --bgpagecolor: #222;
+  --bgpagecolor: #9E8D9E;
   --bgcontentcolor: #282828;
   --titlecolor: #bbb;
   --linkcolor: #d93b00;
@@ -54,7 +54,7 @@
 [data-theme=light],
 :root:not([data-theme=dark]) {
   color-scheme: light;
-  --bgpagecolor: #666;
+  --bgpagecolor: #9E8D9E;
   --bgcontentcolor: #ddd;
   --titlecolor: #222;
   --linkcolor: orangered;
